--- a/index.html
+++ b/index.html
@@ -2,241 +2,206 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Scavenger Hunt</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Keyword Scavenger Hunt</title>
 
 <style>
-body {
-  font-family: system-ui, sans-serif;
-  background: linear-gradient(180deg,#eef2f7,#f4f6f8);
-  padding:20px;
-}
-
-.card {
-  max-width:900px;
-  margin:auto;
-  background:#fff;
-  padding:24px;
-  border-radius:14px;
-}
-
-button {
-  padding:14px 20px;
-  font-size:18px;
-  cursor:pointer;
-  border:none;
-  border-radius:10px;
-}
-
-button.primary {
-  background:#2ecc71;
-  color:white;
-  margin-top:14px;
-}
-
-button.secondary {
-  background:#3498db;
-  color:white;
-  margin-top:10px;
-}
-
-input {
-  padding:14px;
-  font-size:18px;
-  width:100%;
-  max-width:320px;
-  margin-top:14px;
-  text-align:center;
-}
-
-.center { text-align:center; }
-
-.hunt-card {
-  padding:16px;
-  border-radius:12px;
-  background:#f8fafc;
-  margin-bottom:14px;
-}
-
-.search {
-  width:100%;
-  padding:12px;
-  font-size:16px;
-  margin:16px 0;
-}
-
-.scanner {
-  margin-top:14px;
-  display:none;
-}
-
-video {
-  width:100%;
-  max-width:320px;
-  border-radius:12px;
-}
-
+body { font-family: system-ui, sans-serif; background:#f4f6f8; padding:20px; }
+.card { max-width:900px; margin:auto; background:#fff; padding:20px; border-radius:12px; }
+.hunt { border:1px solid #ddd; padding:12px; border-radius:8px; margin-bottom:12px; }
+button { padding:8px 14px; margin:4px; }
+input, textarea { width:100%; padding:8px; margin-bottom:8px; }
 .overlay {
-  position:fixed;
-  inset:0;
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.6);
   display:none;
-  align-items:center;
   justify-content:center;
-  font-size:40px;
-  font-weight:bold;
-  color:white;
+  align-items:center;
+  color:#fff;
+  font-size:24px;
   z-index:1000;
-}
-.overlay.correct { background:rgba(0,160,0,0.85); }
-.overlay.wrong { background:rgba(200,0,0,0.85); }
-
-.print-page { page-break-after:always; }
-.print-item { margin-bottom:20px; }
-.notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
-.qr-label { font-weight:bold; margin-bottom:6px; }
-
-@media print {
-  button, .search, .scanner { display:none; }
 }
 </style>
 </head>
 
 <body>
-
 <div class="card" id="app"></div>
-
-<div id="correct" class="overlay correct">✅ Correct!</div>
-<div id="wrong" class="overlay wrong">❌ Try Again</div>
+<div class="overlay" id="overlay">❌ Wrong Keyword! Try Again...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 
 <script>
-/* ================= UTIL ================= */
+/* ================= HELPERS ================= */
 function uid(){ return Math.random().toString(36).slice(2,9); }
-function code(){ return Math.floor(100000 + Math.random()*900000).toString(); }
 
-/* ================= BASE HUNTS (VERBATIM) ================= */
-const BASE_HUNTS = [
-{
-  name:"Escape the House",
-  clues:[
-    ["I show your face but I’m not a photo. I hang on walls and doors. Where am I?","Mirror"],
-    ["I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.","Bookshelf"],
-    ["I open wide but never talk. I keep food safe and cold. Don’t forget to close me!","Fridge"],
-    ["I go round and round but never get dizzy. I clean but hate socks in pairs.","Washing Machine"],
-    ["I have hands but no arms. I never clap, but I’m always right on time.","Clock"],
-    ["I hide your feet when you’re not home. I like pairs, but I’m often missing one.","Shoe Rack"],
-    ["I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.","Couch"],
-    ["I light up the dark but disappear by day. Flip me on.","Lamp"],
-    ["I’m full of secrets, but I don’t talk. You knock before opening me.","Bedroom Door"],
-    ["You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED","Red Ribbon"]
-  ]
-},
-{
-  name:"Fortnite IRL",
-  clues:[
-    ["You’ve dropped in. First loot location: Where controllers go when the game is off.","Gaming Desk"],
-    ["Shields up! Find the place where drinks recharge HP.","Fridge"],
-    ["Storm incoming 🌪️ Where do shoes hide when the storm hits outside?","Entrance"],
-    ["You need mats. Wood, brick, metal… Find where tools live.","Garage"],
-    ["Campfire deployed 🔥 Where the family gathers to chill.","Lounge Room"],
-    ["Inventory check. You can’t win without sleep.","Bed"],
-    ["Chest nearby… I hear it. Where secrets are stored behind closed doors.","Wardrobe"],
-    ["Reboot van activated ⚡ Where devices come back to life.","Phone Charger"],
-    ["High ground wins games. Go where you can see the whole room.","Stairs"],
-    ["Final circle. Only one remains. Where battles are watched, not played.","TV"],
-    ["One last challenge… Look where snacks disappear during long sessions.","Pantry"],
-    ["VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER","Silver Ribbon"]
-  ]
-},
-{
-  name:"System Breach",
-  clues:[
-    ["SYSTEM ONLINE Begin at the device that controls all others.","Router"],
-    ["AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.","Notebook"],
-    ["DATA COLD STORAGE Files preserved at low temperature.","Fridge"],
-    ["INPUT DEVICE DETECTED Where commands are typed, not spoken.","Keyboard"],
-    ["PERIPHERAL FOUND One click can change everything.","Mouse"],
-    ["POWER SOURCE Without this, the system fails.","Power Board"],
-    ["CACHE CLEARED Where clothes are reset to default state.","Laundry"],
-    ["BACKUP LOCATION Where items are stored 'just in case'.","Garage"],
-    ["DISPLAY OUTPUT Pixels form reality here.","Monitor"],
-    ["SECURITY CHECKPOINT Entry requires permission.","Door"],
-    ["ENCRYPTED STORAGE Locked, hidden, not obvious.","Drawer"],
-    ["SYSTEM LOG Tracks everything that happens over time.","Clock"],
-    ["USER PROFILE Where the operator rests.","Bed"],
-    ["FINAL ACCESS NODE Only the admin reaches this point.","Desk"],
-    ["ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN","Green Ribbon"]
-  ]
-}
-];
+/* ================= BASE HUNTS ================= */
+const DEFAULT_HUNTS = {
+  escape: {
+    name: "Escape the House",
+    intro: "Welcome! Your escape challenge begins now 🏠",
+    clues: [
+      { clue: "I show your face but I'm not a photo.", keyword: "mirror" },
+      { clue: "I have pages but no homework.", keyword: "book" },
+      { clue: "I keep food safe and cold.", keyword: "fridge" }
+    ],
+    finish: "🎉 Congratulations! You escaped the house!"
+  }
+};
 
-/* ================= INIT ================= */
-let hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
+/* ================= STORAGE ================= */
+let userHunts = JSON.parse(localStorage.getItem("userHunts") || "{}");
 
-if(!localStorage.getItem("huntsInitialized")){
-  hunts = BASE_HUNTS.map(h=>({
-    id:uid(),
-    name:h.name,
-    steps:h.clues.map(c=>({ clue:c[0], location:c[1], code:code() }))
-  }));
-  localStorage.setItem("hunts",JSON.stringify(hunts));
-  localStorage.setItem("huntsInitialized","true");
-}
+/* 🔧 FIX: persist base hunts so QR/PDF works */
+Object.keys(DEFAULT_HUNTS).forEach(k=>{
+  if(!userHunts[k]) userHunts[k]=DEFAULT_HUNTS[k];
+});
+localStorage.setItem("userHunts", JSON.stringify(userHunts));
 
-const q = new URLSearchParams(location.search);
+let HUNTS = { ...DEFAULT_HUNTS, ...userHunts };
+
 const app = document.getElementById("app");
+const q = new URLSearchParams(location.search);
 
 /* ================= ROUTER ================= */
-if(q.get("start")) startPage(q.get("start"));
-else if(q.get("play")) play();
-else if(q.get("print")) printPage(q.get("print"));
+if(q.get("play")) play();
+else if(q.get("edit")) editHunt(q.get("edit"));
+else if(q.get("new")) editHunt();
 else home();
 
 /* ================= HOME ================= */
 function home(){
   app.innerHTML = `
-    <h1>Scavenger Hunts</h1>
-    <input class="search" placeholder="Search hunts...">
-    <button class="primary" onclick="location='create-hunt.html'">➕ Create New Hunt</button>
-    ${hunts.map(h=>`
-      <div class="hunt-card">
-        <strong>${h.name} (${h.steps.length} steps)</strong><br><br>
-        <button onclick="location='?start=${h.id}'">▶ Test</button>
-        <button onclick="location='?print=${h.id}'">🖨 Print Instructions</button>
+    <h1>Keyword Scavenger Hunts</h1>
+    <button onclick="location='?new=1'">➕ Create Hunt</button>
+    ${Object.entries(HUNTS).map(([k,h])=>`
+      <div class="hunt">
+        <h3>${h.name}</h3>
+        <button onclick="location='?play=${k}&s=0'">▶ Start</button>
+        <button onclick="location='?edit=${k}'">✏ Edit</button>
+        <button onclick="generatePDF('${k}')">🖨 PDF / QR</button>
       </div>
     `).join("")}
   `;
 }
 
-/* ================= START ================= */
-function startPage(id){
-  const h = hunts.find(x=>x.id===id);
+/* ================= CREATE / EDIT ================= */
+function editHunt(k){
+  const h = k ? HUNTS[k] : { name:"", intro:"", clues:[], finish:"" };
+
   app.innerHTML = `
-<div class="center">
-<h1>🎉 Welcome, Explorer!</h1>
-<p><strong>${h.name}</strong></p>
-<p>You have been invited on a special scavenger hunt!</p>
-<p>Around this place are hidden clues waiting to be found.<br>
-Each clue will lead you to the next one.</p>
-<ul style="text-align:left;display:inline-block">
-<li>Look carefully</li>
-<li>Think smart</li>
-<li>Scan a QR code</li>
-<li>Type in a secret number</li>
-</ul>
-<p>When you’re ready…</p>
-<button class="primary" onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
-</div>`;
+    <h2>${k?"Edit":"Create"} Hunt</h2>
+    <input id="name" placeholder="Name" value="${h.name}">
+    <textarea id="intro" placeholder="Intro">${h.intro}</textarea>
+    <div id="clues"></div>
+    <button onclick="addClue()">➕ Add Clue</button>
+    <textarea id="finish" placeholder="Finish">${h.finish}</textarea>
+    <button onclick="saveHunt('${k||""}')">💾 Save</button>
+    <button onclick="home()">Cancel</button>
+  `;
+  h.clues.forEach(c=>addClue(c.clue,c.keyword));
+}
+
+function addClue(clue="",keyword=""){
+  const d=document.createElement("div");
+  d.className="clue-item";
+  d.innerHTML=`
+    <textarea placeholder="Clue">${clue}</textarea>
+    <input placeholder="Keyword" value="${keyword}">
+  `;
+  document.getElementById("clues").appendChild(d);
+}
+
+function saveHunt(k){
+  const name=document.getElementById("name").value.trim();
+  const intro=document.getElementById("intro").value.trim();
+  const finish=document.getElementById("finish").value.trim();
+
+  const clues=[...document.querySelectorAll(".clue-item")]
+    .map(d=>({
+      clue:d.querySelector("textarea").value.trim(),
+      keyword:d.querySelector("input").value.trim().toLowerCase()
+    }))
+    .filter(c=>c.clue && c.keyword);
+
+  if(!name||!intro||!finish||!clues.length){
+    alert("All fields required"); return;
+  }
+
+  if(!k) k=uid();
+  userHunts[k]={name,intro,clues,finish};
+  localStorage.setItem("userHunts", JSON.stringify(userHunts));
+  HUNTS={...DEFAULT_HUNTS,...userHunts};
+  home();
 }
 
 /* ================= PLAY ================= */
-/* (unchanged — omitted for brevity in explanation, fully present in your file) */
+function play(){
+  const key=q.get("play");
+  const h=HUNTS[key];
+  const step=parseInt(q.get("s")||0);
 
-/* ================= PRINT ================= */
-/* (unchanged — fully intact) */
+  if(step===0){
+    return render(h.intro,"start");
+  }
+
+  if(step<=h.clues.length){
+    const c=h.clues[step-1];
+    return render(c.clue,c.keyword);
+  }
+
+  render(h.finish,null);
+}
+
+function render(text,keyword){
+  app.innerHTML=`
+    <p>${text}</p>
+    ${keyword?`
+      <input id="ans" placeholder="Enter keyword">
+      <button onclick="check('${keyword}')">Submit</button>
+    `:""}
+  `;
+}
+
+function check(k){
+  const v=document.getElementById("ans").value.trim().toLowerCase();
+  if(v===k){
+    const n=parseInt(q.get("s"))+1;
+    location=`?play=${q.get("play")}&s=${n}`;
+  }else{
+    overlay.style.display="flex";
+    document.getElementById("ans").value="";
+    setTimeout(()=>overlay.style.display="none",2000);
+  }
+}
+
+/* ================= PDF / QR ================= */
+async function generatePDF(k){
+  const {jsPDF}=window.jspdf;
+  const pdf=new jsPDF();
+  const h=HUNTS[k];
+  const base=location.origin+location.pathname;
+
+  async function page(title,url){
+    const c=document.createElement("canvas");
+    await QRCode.toCanvas(c,url,{width:300});
+    pdf.addPage();
+    pdf.text(title,10,20);
+    pdf.addImage(c.toDataURL(),"PNG",30,40,150,150);
+    pdf.text(url,10,230);
+  }
+
+  pdf.text(h.name,10,20);
+  pdf.text("Scan QR codes in order",10,30);
+
+  await page("START",`${base}?play=${k}&s=0`);
+  for(let i=0;i<h.clues.length;i++){
+    await page(`CLUE ${i+1}`,`${base}?play=${k}&s=${i+1}`);
+  }
+  await page("FINISH",`${base}?play=${k}&s=${h.clues.length+1}`);
+
+  pdf.save(`${h.name}.pdf`);
+}
 </script>
-
 </body>
 </html>
